--- a/index.html
+++ b/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Position-task</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Position-task</title>
+  </head>
+  <body>
+    <main>
+      <nav>
+        <ul class="nav-list">
+          <li class="nav-list-item bgcolor-border">
+            <a href="#" class="link">Home</a>
+          </li>
+          <li class="nav-list-item bgcolor-border">
+            <a href="#" class="link">Categories</a>
+            <ul class="sub-nav-list">
+              <li class="sub-nav-list-item bgcolor-border">
+                <a href="#" class="link">man</a>
+              </li>
+              <li class="sub-nav-list-item bgcolor-border">
+                <a href="#" class="link">Women</a>
+                <ul class="women-sub-nav-list">
+                  <li class="women-sub-nav-list-item bgcolor-border">
+                    <a href="#" class="link">Dress</a>
+                  </li>
+                  <li class="women-sub-nav-list-item bgcolor-border">
+                    <a href="#" class="link">Pants</a>
+                  </li>
+                  <li class="women-sub-nav-list-item bgcolor-border">
+                    <a href="#" class="link">Shoes</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="sub-nav-list-item bgcolor-border">
+                <a href="#" class="link">kids</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-list-item bgcolor-border">
+            <a href="#" class="link">About</a>
+          </li>
+          <li class="nav-list-item bgcolor-border">
+            <a href="#" class="link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, ipsam.
+        Aliquid doloremque eligendi, odio distinctio et tenetur eaque deleniti
+        dolore molestiae odit sequi fugit cumque velit quisquam ad quos expedita
+        ipsum rem nemo beatae? Deleniti officia repudiandae facere placeat
+        corporis, reiciendis voluptates vitae vel adipisci et consectetur modi
+        nesciunt, commodi non? Iste eos ad velit suscipit aliquid quaerat
+        debitis perspiciatis aperiam est cumque molestiae, necessitatibus
+        voluptatum dolores illo fuga, eaque pariatur laudantium explicabo dolore
+        sapiente? Reiciendis, nobis. Eius modi, aliquid eligendi optio cumque
+        nisi et vero, qui animi expedita adipisci dolor impedit ipsa, tenetur
+        nostrum possimus quasi. Asperiores, dolor maxime.
+      </p>
+    </main>
+  </body>
 </html>
