Fix navigation menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Position-task</title>
   </head>
   <body>
-    <main>
+    <header>
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item bgcolor-border">
@@ -48,19 +48,25 @@
           </li>
         </ul>
       </nav>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, ipsam.
-        Aliquid doloremque eligendi, odio distinctio et tenetur eaque deleniti
-        dolore molestiae odit sequi fugit cumque velit quisquam ad quos expedita
-        ipsum rem nemo beatae? Deleniti officia repudiandae facere placeat
-        corporis, reiciendis voluptates vitae vel adipisci et consectetur modi
-        nesciunt, commodi non? Iste eos ad velit suscipit aliquid quaerat
-        debitis perspiciatis aperiam est cumque molestiae, necessitatibus
-        voluptatum dolores illo fuga, eaque pariatur laudantium explicabo dolore
-        sapiente? Reiciendis, nobis. Eius modi, aliquid eligendi optio cumque
-        nisi et vero, qui animi expedita adipisci dolor impedit ipsa, tenetur
-        nostrum possimus quasi. Asperiores, dolor maxime.
-      </p>
+    </header>
+    
+    <main>
+      <section class="main-text">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, ipsam.
+          Aliquid doloremque eligendi, odio distinctio et tenetur eaque deleniti
+          dolore molestiae odit sequi fugit cumque velit quisquam ad quos
+          expedita ipsum rem nemo beatae? Deleniti officia repudiandae facere
+          placeat corporis, reiciendis voluptates vitae vel adipisci et
+          consectetur modi nesciunt, commodi non? Iste eos ad velit suscipit
+          aliquid quaerat debitis perspiciatis aperiam est cumque molestiae,
+          necessitatibus voluptatum dolores illo fuga, eaque pariatur laudantium
+          explicabo dolore sapiente? Reiciendis, nobis. Eius modi, aliquid
+          eligendi optio cumque nisi et vero, qui animi expedita adipisci dolor
+          impedit ipsa, tenetur nostrum possimus quasi. Asperiores, dolor
+          maxime.
+        </p>
+      </section>
     </main>
   </body>
 </html>
